// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GeneratedBytesEndpointRequest > getBuildRequestStatements > generates binary upload request construction 1`] = `
"const _binaryUploadRequest = core.toBinaryUploadRequest(uploadable);
let _headers: core.Fetcher.Args["headers"] = mergeHeaders(this._options?.headers, _binaryUploadRequest.headers, requestOptions?.headers);"
`;

exports[`GeneratedDefaultEndpointRequest > getBuildRequestStatements > generates wrapper destructuring for wrapper sdkRequest 1`] = `
"const { limit, ..._body } = request;
const _queryParams: Record<string, unknown> = {
    limit
};
let _headers: core.Fetcher.Args["headers"] = mergeHeaders(this._options?.headers, requestOptions?.headers);"
`;

exports[`GeneratedFileUploadEndpointRequest > getBuildRequestStatements > generates form data construction for single file 1`] = `
"const _body = core.newFormData();
_body.appendFile("document", document);
const _maybeEncodedRequest = await core.getFormDataRequest(_body);
let _headers: core.Fetcher.Args["headers"] = mergeHeaders(this._options?.headers, mergeOnlyDefinedHeaders({ ...(_maybeEncodedRequest.headers) }), requestOptions?.headers);"
`;

exports[`GeneratedFileUploadEndpointRequest > getBuildRequestStatements > generates form data construction with body property 1`] = `
"const _body = core.newFormData();
_body.appendFile("document", document);
_body.append("description", request.description.toString());
const _maybeEncodedRequest = await core.getFormDataRequest(_body);
let _headers: core.Fetcher.Args["headers"] = mergeHeaders(this._options?.headers, mergeOnlyDefinedHeaders({ ...(_maybeEncodedRequest.headers) }), requestOptions?.headers);"
`;
